--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.0.0",
+    "dotenv": "^8.0.0",
+    "joi": "^14.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
@@ -35,6 +37,8 @@
     "@nestjs/testing": "^6.0.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
+    "@types/joi": "^14.3.3",
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
     "concurrently": "^4.1.0",
